<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">
    <item
        android:id="@+id/homeFragment"
        android:orderInCategory="1"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home_fragment"/>

    <item
        android:id="@+id/busFragment"
        android:orderInCategory="2"
        android:icon="@drawable/ic_bus"
        android:title="@string/nav_home_bus"/>

    <item
        android:id="@+id/bikeFragment"
        android:orderInCategory="3"
        android:icon="@drawable/ic_bike"
        android:title="@string/nav_home_bike"/>

    <item
        android:id="@+id/subwayFragment"
        android:orderInCategory="4"
        android:icon="@drawable/ic_subway"
        android:title="@string/nav_home_subway"/>

    <item
        android:id="@+id/appsFragment"
        android:orderInCategory="5"
        android:icon="@drawable/ic_apps"
        android:title="@string/nav_home_apps"/>

</menu>
